--- a/index.html
+++ b/index.html
@@ -7,8 +7,51 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="card">
+        <div class="search">
+            <input type="text" placeholder="enter the city name" spellcheck="false">
+            <button><img src="images/search.png" alt=""></button>
+        </div>
+        <div class="weather">
+            <img src="images/rain.png"  class="weather-icon">
+            <h1 class="temp">22°c</h1>
+            <h2 class="city">New York</h2>
+            <div class="details">
+                <div class="col">
+                    <img src="images/humidity.png" alt="">
+                    <div>
+                        <p class="humidity">50%</p>
+                        <p>Humidity</p>
+                    </div>
+                </div>
 
-    <script src="script.js"></script>
+                <div class="col">
+                    <img src="images/wind.png" alt="">
+                    <div>
+                        <p class="wind">15 km/h</p>
+                        <p>Wind Speed</p>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+
+    <script src="script.js">
+
+        const apiKey = "8b9ac1c9a96a446a9619a5f896092447";
+        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?&units=metric&q=mumbai";
+
+        async function checkWeather() {
+            const response = await fetch(apiUrl + `&appid=${apiKey}` );
+            var data = await response.json();
+
+            console.log(data);
+            
+        }
+        checkWeather()
+
+    </script>
 </body>
 </html>
