--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
     <script>
 
-        const apiKey = "8b9ac1c9a96a446a9619a5f896092447";
-        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q="
+        const apiKey = "go to openweather website create account and generate an api key and paste it here";
+        const apiUrl = "on the website go to api section select api doc of current weather data and search for weather by city name and paste the link here with unit as metric"
 
         const searchBox = document.querySelector(".search input")
         const searchBtn = document.querySelector(".search button")
